# kassen_reversi

./: .gitignore  Cargo.toml  README.md  app.js  index.html  jsconfig.json  package.json
assets/: app.js  index.html  style.css
front/: constants.js  main.js
front/display/: ReversiBoard.js  ReversiCell.js  ReversiStone.js  ScoreGauge.js  TurnPanel.js  index.js
front/scene/: MainScene.js  ResultOverlay.js  index.js
src/: board.rs  game.rs  main.rs
