[package]
name = "kassen_reversi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.1", features = ["ws"] }
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs"] }
